Closed Bug 1838672 Opened 6 months ago Closed 4 months ago

unified folders doesn't show spam folder

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

Thunderbird 115

Tracking

(thunderbird_esr115? fixed, thunderbird117? affected)

RESOLVED FIXED
118 Branch
Tracking Status
thunderbird_esr115 ? fixed
thunderbird117 ? affected

People

(Reporter: dquiros, Assigned: darktrojan)

References

Details

(Keywords: dupeme, Whiteboard: [Supernova3p])

Attachments

(2 files)

Steps to reproduce:

Open TB with Unified Folders.

Actual results:

unified folders dont show spam folder.

Expected results:

unified folders should show spam folder with accounts in it. Like the trash folder.

Hmm, I see just one Junk (not expansible even if I have many accounts with Junk - some with localized names).
Code should be somewhere around here: https://searchfox.org/comm-central/rev/0a8a9a51ec7ff330d93ac06b6fe02f4e95be57e1/mail/base/content/about3Pane.js#780

Component: Untriaged → Folder and Message Lists
Whiteboard: [Supernova3p]
Keywords: dupeme

Are you still seeing this issue with 116?

Flags: needinfo?(dquiros)

yes

Flags: needinfo?(dquiros)

Hi! I am affected as well (115.0.1). I also see IMAP "Junk" folders showing up in unified folders but not "Spam" folders. This is a consistent false behaviours though all my accounts and it was different before v115 where all such folders (Junk and Spam) were grouped in the same way.

Duplicate of this bug: 1811846
See Also: → 1845544

Affected in TB 115.1.0

TB 117.0b1

Summary: unified folders dont show spam folder → unified folders doesn't show spam folder

it should be dont as folders is plural.

This is far from ideal, but I was able to "fix" this issue by wiping out my accounts and profile and setting up my mail accounts from scratch. Even then, it took a couple tries before it got it right. Seems like it's more likely to work if you don't engage the Unified Folder view until after you've set up all of your mail accounts first (and made sure all your folder settings are correct for each account).

so if you use unified accounts and add another account it breaks again and have to start over?

Admittedly I did not test rigorously. What I experienced was only:

Set up Account 1 > Switch to Unified > Set up Account 2 => broken
Set up Account 1 > Set up Account 2 > Switch to Unified => works

Beyond that I haven't experimented or anything more. It's working for me for now and I don't want to mess it up again.

I get your point, I would be scared as well.

what if you have 10 accounts? 100?

it is a bug.

(In reply to yosukematsumura from comment #9)

Seems like it's more likely to work if you don't engage the Unified Folder view until after you've set up all of your mail accounts first (and made sure all your folder settings are correct for each account).

I can see a problem which would cause accounts added after Unified Folders is turned on to not have their Spam/Junk folder added to the unified Spam folder. That is probably the cause of this bug and bug 1845544.

This is far from ideal, but I was able to "fix" this issue by wiping out my accounts and profile and setting up my mail accounts from scratch. Even then, it took a couple tries before it got it right.

If you right-click on the unified folder and click on Properties, you can choose the folders that the unified folder looks in.

Assignee: nobody → geoff
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

"If you right-click on the unified folder and click on Properties, you can choose the folders that the unified folder looks in."

Good call!

Some of my accounts have junk and spam folders, some only one of them, some none. I can select them all and hopefully get all SPAM emails in the Junk Unified Folder.

It is a shame I cant Rename that Unified Folder to SPAM or whatever I want. It seems it reads it and creates the name for you and cant be changed.

A request to be able to change the name?

Severity: -- → S3
Priority: -- → P2

We've just been ignoring junk folders in this function until now.

A virtual folder can be modified during an OnFolderAdded notification, but the (real) added folder
may not yet exist in the folder lookup service. When the folder tree is notified of the virtual
folder change, it asks the folder lookup service for the folders, so they need to exist.

Depends on D185973

See Also: → 1734254
Attachment #9348509 - Attachment description: Bug 1838672 - Add junk folders to the unified junk folder when they get created. r=#thunderbird-reviewers → Bug 1838672 - Add junk folders to the unified junk folder when they get created. r=mkmelin
Attachment #9348510 - Attachment description: Bug 1838672 - Ensure a virtual folder's searched folders exist when filling the folder tree. r=#thunderbird-reviewers → Bug 1838672 - Ensure a virtual folder's searched folders exist when filling the folder tree. r=aleca
Target Milestone: --- → 118 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/bd72160cab8d
Add junk folders to the unified junk folder when they get created. r=mkmelin
https://hg.mozilla.org/comm-central/rev/615ee9c6ec34
Ensure a virtual folder's searched folders exist when filling the folder tree. r=aleca

Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED

Comment on attachment 9348509 [details]
Bug 1838672 - Add junk folders to the unified junk folder when they get created. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: folders from new accounts might not get added to unified folders
Testing completed (on c-c, etc.): in 118 beta 1
Risk to taking this patch (and alternatives if risky): low

(both patches)

Attachment #9348509 - Flags: approval-comm-esr115?

Comment on attachment 9348509 [details]
Bug 1838672 - Add junk folders to the unified junk folder when they get created. r=mkmelin

[Triage Comment]
Approved for esr115

Attachment #9348509 - Flags: approval-comm-esr115? → approval-comm-esr115+

Comment on attachment 9348510 [details]
Bug 1838672 - Ensure a virtual folder's searched folders exist when filling the folder tree. r=aleca

[Triage Comment]
Approved for esr115

Attachment #9348510 - Flags: approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.