Bug 1838672 - Add junk folders to the unified junk folder when they get created. r=mkmelin

We've just been ignoring junk folders in this function until now.

Differential Revision: https://phabricator.services.mozilla.com/D185973

--HG--
extra : moz-landing-system : lando